# restaurant-agent

./: .gitignore  Flow.md  Perfect Complete Flow.md  README.md  env.example  pyproject.toml
backend-server/: pyproject.toml  server.py
backend-server/data/: bills.json  customers.json  menu.json  orders.json  reservations.json  tables.json
deployment/: deploy.py  test_deployment.py
eval/: HappyFlow.evalset.json  __init__.py  test_config.json  test_eval.py
restaurant_agent/: __init__.py  agent.py  agent_deploy.py  callbacks.py  prompts.py  tools.py
restaurant_agent/sub_agents/: __init__.py  cashier.py  chef.py  server.py  waiter.py
tests/: __init__.py
tests/integration/: __init__.py  test_agents.py
tests/unit/: __init__.py  test_agent_init.py  test_agent_tools.py  test_backend_tools.py  test_callbacks.py
